css/style.css
@import url(variables.css);
/* 1. Use a more-intuitive box-sizing model. */
*,
*::before,
*::after {
  box-sizing: border-box;
}
/* 2. Remove default margin */
* {
  margin: 0;
}
/* Typographic tweaks!
    3. Add accessible line-height
    4. Improve text rendering
*/
body {
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  font-family: "Nunito Sans", sans-serif;
  background-color: var(--bg_default);
  color: var(--body-text);
}
/* 5. Improve media defaults */
img,
picture,
video,
canvas,
svg {
  display: block;
  max-width: 100%;
}
/* 6. Remove built-in form typography styles */
input,
button,
textarea,
select {
  font: inherit;
}
/* 7. Avoid text overflows */
p,
h1,
h2,
h3,
h4,
h5,
h6 {
  overflow-wrap: break-word;
}
/* 8. Create a root stacking context */
#root,
#__next {
  isolation: isolate;
}
/* here goes my code.. Mood is here ^_^ */

.border {
  border: 1px solid red;
}
.container {
  padding-right: 3rem !important;
  padding-left: 3rem !important;
  margin-right: auto !important;
  margin-left: auto !important;
}
.center-div {
  display: flex;
  justify-content: center;
  align-items: center;
}
header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  min-height: 8vh;
}
header .logo {
  color: var(--brand-primary);
  font-size: 1.5rem;
  font-weight: bold;
  letter-spacing: 0.25rem;
}
header .buttons a {
  text-decoration: none;
  font-size: 1rem;
  color: var(--body-text);
  border: 1px solid var(--lines-color);
  width: 180px;
  border-radius: 4px;
  letter-spacing: 0.5px;
  padding: 5px 10px;
  transition: all 0.7s ease;
  text-transform: capitalize;
}
header .buttons a:hover {
  color: var(--bg_default);
  background-color: var(--body-text);
}
.banner {
  height: 15vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  line-height: 20px;
  padding-bottom: 10px;
}
.welcome {
  height: 50%;
}
.banner > div {
  display: flex;
  flex-direction: column;
  align-items: center;
}
.banner h3 {
  font-weight: bolder;
  text-transform: capitalize;
  color: var(--brand-secondary);
  background-image: -webkit-linear-gradient(
    0deg,
    var(--brand-secondary) 33%,
    var(--brand-primary) 59%
  );
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.hero {
  display: flex;
  position: relative;
  width: 100%;
  height: 50%;
}
.left {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 1;
  background: linear-gradient(
    to right,
    var(--brand-primary),
    var(--brand-secondary)
  );
  clip-path: polygon(0 0, 0 100%, 80% 0);
}
.right {
  position: absolute;
  top: 0;
  right: 0;
  width: 100%;
  height: 100%;
  background: linear-gradient(to right, #07ac49, var(--brand-secondary));
  clip-path: polygon(0 0, 100% 0, 100% 100%);
}
.main {
  background-color: var(--bg_body);
  padding: 1em 0;
}
.search {
  color: #c9c9c9;
}
.search-and-filter {
  padding-left: 0.5em;
  margin-bottom: 1em;
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: var(--bg_default);
  border-radius: 7px;
  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 50px;
}
.filters {
  min-width: 30%;
  display: flex;
  justify-content: space-between;
  height: 100%;
}
.filters > div {
  min-width: 50%;
  border-left: 1px solid var(--lines-color);
  padding: 0.5em;
}
.sort,
.filter {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
}
.sort > div:nth-child(1),
.filter > div:nth-child(1) {
  font-size: small;
}

.select {
  display: flex;
  justify-content: space-between;
}
.count {
  margin-bottom: 1em;
}
.courses {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(255px, 1fr));
  gap: 1em;
}
.course-card {
  min-height: 300px;
  background-color: var(--bg_default);
  border-radius: 7px;
  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 50px;
  transition: all 0.3s ease;
}
.course-card:hover {
  transform: scale(1.02);
  box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
}
.course-card .course-image {
  height: 50%;
}
.course-card .course-image > img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  border-radius: 7px 7px 0 0;
}

.course-card-data {
  padding: 20px 10px;
  box-sizing: border-box;
}
.description {
  margin-bottom: 20px;
}
.description > p {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}
.rate {
  color: #e6981c;
  margin-top: 20px;
}
.author {
  color: #c9c9c9;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}
.description > p,
.description > h3,
.welcome > p {
  text-transform: capitalize;
}
div {
  text-transform: capitalize;
}
footer {
  display: flex;
  justify-content: center;
  padding: 0.5em;
}
/* course data page */
.data {
  color: #ededed;
  background-color: var(--details-bg);
}
.center-data {
  display: flex;
  justify-content: space-between;
  margin: 1vw 10vw !important;
}
.course-data {
  padding: 1em 0;
  width: 65%;
}
.course-type {
  color: var(--brand-secondary);
}
.course-data > .description {
  text-transform: none;
  padding-top: 2em;
}
.card-data {
  width: 30%;
}
.card-data > img {
  height: 50%;
  width: 100%;
  object-fit: fill;
}

